K1J-1239: Add srsActive flag to CertificateServiceUserDTO.